Add new settings for api and mvc (linking like base url and db string), Change in UserDTO id to userId, add service like group and recoding user

--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebAPI": {
+    "BaseUrl": "https://localhost:7176/api"
+  }
 }
